--- a/MALO-app/src/app/auth/features/log-in/log-in.component.html
+++ b/MALO-app/src/app/auth/features/log-in/log-in.component.html
@@ -32,5 +32,5 @@
                 </form>
             </div>
         </div>
-    </div> <!-- Footer incluido en la estructura -->
+    </div>
 </div>
